hw03/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otusapp
  labels:
    app: otusapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: otusapp
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: otusapp
    spec:
      containers:
        - name: otusapp
          image: akinxela/otusapp:hw03
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health/
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health/
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
