hw03/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otusapp
  labels:
    app: otusapp
spec:
  selector:
    app: otusapp
  ports:
    - name: http
      port: 80
      targetPort: 8000
  type: ClusterIP
